# pyrdme

./: .gitignore  README.md  pyproject.toml
examples/: centraldogma_loop_sweep.py  oscillating-rxn.ipynb  spore_dormancy_phase1.ipynb  sweep_atp_ribo.py  sweep_rnap_atp.py  sweep_rnap_ribo.py
pyrdme/: __init__.py  ensemble.py  lattice.py  simulate.py
pyrdme/solvers/: __init__.py  _numba_kernels.py  base.py  diffusion.py  mpd.py
results/: README.md
results/rnap_ribo/: aggregated.npz  results.pkl  sweep_meta.json
results/rnap_ribo/runs/: N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=0_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=10_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=11_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=12_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=13_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=14_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=15_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=16_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=17_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=18_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=19_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=1_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=20_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=21_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=22_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=23_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=24_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=25_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=26_t_max=50000.0.json  N_ATP=1000_N_RNAP=100_N_Ribo=100_seed=27_t_max=50000.0.json  (+9980 more)
results/sweep_atp_ribo_20260331_103313/: aggregated.npz  results.pkl  sweep_meta.json
results/sweep_rnap_atp_20260330_115858/: aggregated.npz  results.pkl  sweep_meta.json
tests/: __init__.py  test_diffusion.py  test_lattice.py  test_mpd.py  test_reactions.py
(+10640 files in other folders)
