[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrdme"
version = "0.1.0"
description = "Lightweight Python package for spatial stochastic simulation using the Reaction-Diffusion Master Equation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ron Acda", email = "racda@illinois.edu"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["rdme", "stochastic simulation", "reaction-diffusion", "systems biology", "spatial modeling"]

dependencies = [
    "numpy>=1.20",
    "pycme>=0.1.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5",
]
analysis = [
    "pandas>=1.3",
    "xarray>=0.19",
]
gpu = [
    "cupy-cuda12x",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "jupyter>=1.0",
]
all = [
    "pyrdme[viz,analysis,gpu,dev]",
]

[project.urls]
Homepage = "https://github.com/Munroe-Meyer-Institute-VR-Laboratory/pyrdme"
Documentation = "https://github.com/Munroe-Meyer-Institute-VR-Laboratory/pyrdme#readme"
Repository = "https://github.com/Munroe-Meyer-Institute-VR-Laboratory/pyrdme"
Issues = "https://github.com/Munroe-Meyer-Institute-VR-Laboratory/pyrdme/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrdme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
